# AutoPlot-Digitizer

./: .gitignore  DETECTION_VISUALIZATION.md  LICENSE  MANIFEST.in  Makefile  README.md  STREAMLIT_CLOUD.md  pyproject.toml  requirements.txt  run_ui.py  streamlit_requirements.txt  test_calibration.py  test_detection_viz.py  test_multi_graph.py  test_new_architecture.py  test_output.csv  test_ui_exact.py  test_ui_functionality.py
.streamlit/: config.toml
docs/: classes_plot_digitizer.puml  packages_plot_digitizer.puml
output/: extraction_summary.json  test_output_new.json  test_output_temp.csv
src/plot_digitizer/: __init__.py  __main__.py  cli.py
src/plot_digitizer/domain/: __init__.py  entities.py  models.py  repositories.py  value_objects.py
src/plot_digitizer/infrastructure/: __init__.py  axis_label_detector.py  detection_visualizer.py  extractor_impl.py  image_loader.py  legend_detector.py  marker_extractor.py  opencv_calibration.py  opencv_color_mask.py  opencv_shape_detector.py  output_writer.py  plot_detector.py
src/plot_digitizer/interfaces/: __init__.py  calibration.py  color_mask.py  shape_detector.py
src/plot_digitizer/use_cases/: extract_plots.py
src/plot_digitizer/usecases/: __init__.py  digitize.py
src/plot_digitizer/utils/: __init__.py  clustering.py  image_io.py
ui/: README.md  app.py  test_app.py
