[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-digitizer"
version = "0.1.0"
description = "Extract XY data points from static 2-D scientific plots"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opencv-python>=4.6",
    "scikit-image>=0.20",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=1.5",
    "typer>=0.9.0",
]

[project.scripts]
plot-digitizer = "plot_digitizer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
